# onnxruntime-efficientTAM

./: CMakeLists.txt
include/: Model.h  SAM2.h
src/: SAM2.cpp  main.cpp
